Bug 50694 - EDITING: when 'Insert Sheet' from .csv no source sheet detected
Summary: EDITING: when 'Insert Sheet' from .csv no source sheet detected
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6.0.0.alpha1
Hardware: Other Windows (All)
: medium major
Assignee: Kohei Yoshida
URL:
Whiteboard: target:3.6.0 target:3.7.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-06-04 13:45 UTC by m.a.riosv
Modified: 2014-05-19 16:02 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Test Kit (23.75 KB, application/zip)
2012-06-04 21:26 UTC, Rainer Bielefeld Retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description m.a.riosv 2012-06-04 13:45:39 UTC
LibreO version 3.6.0alpha1 (Build ID: 66f01b5)
LibO-Dev_3.6.0alpha1_Win_x86_install_multi
version 3.6.0alpha1 (Build ID: 66f01b5)
Win7x64 Ultimate
Clean profile. 

Menu/Insert/Insert sheet from file

doesn't work for CSV files, do nothing, but works for ods or hmtl.
Comment 1 Rainer Bielefeld Retired 2012-06-04 21:24:22 UTC
[Reproducible] with "LibreOffice 3.6.0alpha1  German UI/Locale [Build-ID: 66f01b5] on German WIN7 Home Premium (64bit) 

Steps to reproduce:
0. download + unzip attached test kit
1. open target.ods (or New spreadsheet) wiht 3.6.0alpha1 or later
2. Menu 'Insert -> Sheet - From File -> <Browse> 
   > Fileopen dialot appears
3. Browse fro SOURCE.csv from Test kit, <Open>
   > File Open dialog disappears
   Expected: A source sheet name will appear in empty pane below 
   Actual: pane remains empty

Works fine with "LibreOffice 3.5.4.2  German UI/Locale [Build-ID: 165a79a-7059095-e13bb37-fef39a4-9503d18] on German WIN7 Home Premium (64bit) 
Also no problem with 3.4.5, 3.3.3

Latest available Master I tested where it worked fine:
Server installation of Master "LOdev 3.6.0alpha0+  – WIN7 Home Premium (64bit) ENGLISH UI [Build ID: a502549]" (tinderbox: Win-x86@6-fast, pull time 2012-05-31 07:33:55)

This problem really appeared with 3.6.0alpha1 or very nearby before.

I do not think that this one is critical, for very most users simple workaround to open the .csv (what works fine) + copy/paste will cause no problems. Only if you have to link the .csv Source you will run into problems.

For existing spreadsheets links to .csv contents works without problems in alpha1

@mariosv
If you found out that it's a regression you should mention the last version where the problem was not visible for you
Please avoid meaningless statements like "does not work", that makes it difficult to find DUPs before intensive tests.

And: Good catch

@Kohei:
Please set Status to ASSIGNED and add yourself to "Assigned To" if you accept this Bug
Comment 2 Kohei Yoshida 2012-06-04 21:26:14 UTC
I'm taking this.
Comment 3 Rainer Bielefeld Retired 2012-06-04 21:26:23 UTC
Created attachment 62552 [details]
Test Kit

See Comment 1
Comment 4 Not Assigned 2012-06-05 12:49:22 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=70e4fd2a10f9d7255285d26fe8fec22b18858116&g=libreoffice-3-6

fdo#50694: Honor the preferred filter returned by type detection.


It will be available in LibreOffice 3.6.
Comment 5 Not Assigned 2012-06-05 12:49:47 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3da8f3680556e0163f660a0a159930337c8c32ff

fdo#50694: Honor the preferred filter returned by type detection.
Comment 6 Kohei Yoshida 2012-06-05 12:58:00 UTC
Yay, fixed.
Comment 7 m.a.riosv 2012-06-05 13:13:01 UTC
(In reply to comment #6)
> Yay, fixed.

Thanks Kohei.