fdo#50694: Honor the preferred filter returned by type detection.

Because that filter is more reliable.

Change-Id: Ifbab294bf4f344301410cd671a9245bffa03fa11